[gd_scene load_steps=5 format=2]

[ext_resource path="res://Levels/Level3/Scenes/Chart.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Level3/Scenes/Level3.gd" type="Script" id=2]
[ext_resource path="res://Levels/Level3/Scenes/QuestionPanel.gd" type="Script" id=3]
[ext_resource path="res://Fonts/RobotoRegular28.tres" type="DynamicFont" id=4]

[node name="Level3" type="Node2D"]
script = ExtResource( 2 )

[node name="Chart1" parent="." instance=ExtResource( 1 )]
position = Vector2( 43, 38 )
title = "Temperature"

[node name="Chart2" parent="." instance=ExtResource( 1 )]
position = Vector2( 46, 395 )
title = "PM 2.5"

[node name="Chart3" parent="." instance=ExtResource( 1 )]
position = Vector2( 496, 396 )
title = "PM 10"
step = 50

[node name="Chart4" parent="." instance=ExtResource( 1 )]
position = Vector2( 495, 39 )
title = "Altitude"
step = 1

[node name="StartPopup" type="ColorRect" parent="."]
margin_left = 209.0
margin_top = 281.0
margin_right = 744.0
margin_bottom = 665.0
color = Color( 0.317647, 0.827451, 0.894118, 1 )

[node name="StartButton" type="Button" parent="StartPopup"]
margin_left = 79.0
margin_top = 225.0
margin_right = 484.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 4 )
text = "START COLLECTING DATA"

[node name="EndPopup" type="ColorRect" parent="."]
visible = false
margin_left = 209.0
margin_top = 281.0
margin_right = 744.0
margin_bottom = 665.0
color = Color( 0.317647, 0.827451, 0.894118, 1 )

[node name="EndButton" type="Button" parent="EndPopup"]
margin_left = 79.0
margin_top = 225.0
margin_right = 484.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 4 )
text = "HURRAY!"

[node name="QuestionPanel" type="ColorRect" parent="."]
visible = false
margin_left = 32.0
margin_top = 698.0
margin_right = 903.0
margin_bottom = 911.0
color = Color( 0.317647, 0.827451, 0.894118, 1 )
script = ExtResource( 3 )

[node name="A" type="Button" parent="QuestionPanel"]
margin_left = 48.0
margin_top = 80.0
margin_right = 411.0
margin_bottom = 131.0
custom_fonts/font = ExtResource( 4 )
text = "A"

[node name="B" type="Button" parent="QuestionPanel"]
margin_left = 463.0
margin_top = 80.0
margin_right = 826.0
margin_bottom = 131.0
custom_fonts/font = ExtResource( 4 )
text = "B"

[node name="C" type="Button" parent="QuestionPanel"]
margin_left = 48.0
margin_top = 145.0
margin_right = 411.0
margin_bottom = 196.0
custom_fonts/font = ExtResource( 4 )
text = "C"

[node name="D" type="Button" parent="QuestionPanel"]
margin_left = 463.0
margin_top = 145.0
margin_right = 826.0
margin_bottom = 196.0
custom_fonts/font = ExtResource( 4 )
text = "D"

[node name="Question Text" type="Label" parent="QuestionPanel"]
margin_left = 41.0
margin_top = 11.0
margin_right = 848.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 4 )
text = "This is a very important question! What is the answer?"
align = 1
valign = 1
autowrap = true

[node name="Congrats" type="ColorRect" parent="QuestionPanel"]
visible = false
margin_left = 177.0
margin_top = -417.0
margin_right = 712.0
margin_bottom = -33.0
color = Color( 0.317647, 0.827451, 0.894118, 1 )

[node name="EndGameButton" type="Button" parent="QuestionPanel/Congrats"]
margin_left = 79.0
margin_top = 225.0
margin_right = 484.0
margin_bottom = 330.0
custom_fonts/font = ExtResource( 4 )
text = "Finish"

[node name="CongratsText" type="Label" parent="QuestionPanel/Congrats"]
margin_left = 27.0
margin_top = 23.0
margin_right = 497.0
margin_bottom = 193.0
custom_fonts/font = ExtResource( 4 )
text = "Is it correct? You tell me!"
align = 1
valign = 1
autowrap = true

[connection signal="pressed" from="StartPopup/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="EndPopup/EndButton" to="." method="_on_EndButton_pressed"]
[connection signal="pressed" from="QuestionPanel/A" to="QuestionPanel" method="_on_A_pressed"]
[connection signal="pressed" from="QuestionPanel/B" to="QuestionPanel" method="_on_B_pressed"]
[connection signal="pressed" from="QuestionPanel/C" to="QuestionPanel" method="_on_C_pressed"]
[connection signal="pressed" from="QuestionPanel/D" to="QuestionPanel" method="_on_D_pressed"]
[connection signal="pressed" from="QuestionPanel/Congrats/EndGameButton" to="QuestionPanel" method="_on_EndGameButton_pressed"]
